# shortlinks_fastapi

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 201150410953_refresh_tokens_table.py  f4e116fb2f93_initial_migration.py
src/: config.py  db.py  exceptions.py  main.py
src/api/: auth.py  clicks.py  dependencies.py  links.py  monitoring.py  redirect.py  router.py  users.py
src/models/: __init__.py  auth.py  click.py  link.py  user.py
src/repositories/: auth.py  base.py  click.py  link.py  user.py
src/schemas/: auth.py  click.py  link.py  user.py
src/services/: auth.py  click.py  link.py  user.py
src/tests/: conftest.py  test_auth_and_users.py  test_health.py
src/utils/: jwt.py  link_shortener.py  monitoring.py
